--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "",
   "license": "ISC",
   "type": "module",
-   "dependencies": {
+  "dependencies": {
     "express": "^4.18.2",
     "mongoose": "^8.0.3",
     "bcrypt": "^5.1.1",
@@ -21,7 +21,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express-validator": "^7.0.1",
-    "crypto": "^1.0.1"
+    "crypto": "^1.0.1",
+    "nodemailer": "^6.9.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
